removed oauth token from workflow

--- a/.github/workflows/NuGetPack/NuGet Generation.yml
+++ b/.github/workflows/NuGetPack/NuGet Generation.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           source-url: https://nuget.pkg.github.com/<organization>/index.json
-        env:
-          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}        
+        # env:
+        #   NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}        
 
       - name: Build solution and generate NuGet package
         run: |  
