--- a/Samples/AzureFunction/MonitoringWithApplicationInsights/AzureFunctionAndApplicationInsights/AzureFunctionAndApplicationInsights.csproj
+++ b/Samples/AzureFunction/MonitoringWithApplicationInsights/AzureFunctionAndApplicationInsights/AzureFunctionAndApplicationInsights.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.14.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.8" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.31" />
   </ItemGroup>
   <ItemGroup>
