--- a/Samples/AzureFunction/MonitoringWithApplicationInsights/AzureFunctionAndApplicationInsights/AzureFunctionAndApplicationInsights.csproj
+++ b/Samples/AzureFunction/MonitoringWithApplicationInsights/AzureFunctionAndApplicationInsights/AzureFunctionAndApplicationInsights.csproj
@@ -1,12 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AzureFunctionsVersion>v2</AzureFunctionsVersion>
+    <TargetFramework>net8.0</TargetFramework>
+    <AzureFunctionsVersion>v4</AzureFunctionsVersion>
+<OutputType>Exe</OutputType>
+<ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.14.0" />
+    <Content Include="local.settings.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Core" Version="3.0.41" />
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.8" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.31" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.21.0" />
+  <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.17.2" />
+  <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="1.2.1" />
+  <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
+  <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.2.0" />
+  <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -17,4 +29,7 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+<ItemGroup>
+  <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
+</ItemGroup>
 </Project>
